# index_scraper_v2

./: .gitignore  pyproject.toml
.github/workflows/: terraform.yml
cloudfunction/: config.py  helper.py  main.py  requirements.txt
infrastructure/: alerting.tf  backend.tf  bigquery.tf  bigquery_apartments.tf  bigquery_cars.tf  cloudfunction.tf  locals.tf  main.tf  storage.tf  variables.tf
