[project]
name = "index-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.2",
    "functions-framework>=3.9.2",
    "google-cloud-logging>=3.12.1",
    "google-cloud-storage>=3.4.1",
    "polars>=1.34.0",
    "requests>=2.32.5",
]
